// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text H1 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={true}
  h2={false}
  h3={false}
  h4={false}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#373856",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 31.5,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 39,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
    ]
  }
>
  Hey Now...
</Text>
`;

exports[`Text H1 with Link renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={true}
  h2={false}
  h3={false}
  h4={false}
  h5={false}
  onPress={[Function]}
  p={false}
  style={
    Array [
      Object {
        "color": "#373856",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 31.5,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 39,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
      Object {
        "color": "#373856",
        "textDecorationLine": "underline",
      },
    ]
  }
>
  Hey Now...
</Text>
`;

exports[`Text H2 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={true}
  h3={false}
  h4={false}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#373856",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 27,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 34,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
    ]
  }
>
  Hey Now...
</Text>
`;

exports[`Text H3 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={true}
  h4={false}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#373856",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 22.5,
        "fontWeight": "500",
        "left": 0,
        "lineHeight": 29,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
    ]
  }
>
  Hey Now...
</Text>
`;

exports[`Text H4 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={false}
  h4={true}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#373856",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 19.8,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 24,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
    ]
  }
>
  Hey Now...
</Text>
`;

exports[`Text H5 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={false}
  h4={false}
  h5={true}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#373856",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 18,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 23,
        "margin": 0,
        "marginBottom": 4,
        "marginTop": 4,
        "right": 0,
      },
    ]
  }
>
  Hey Now...
</Text>
`;

exports[`Text P renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={false}
  h4={false}
  h5={false}
  onPress={null}
  p={true}
  style={
    Array [
      Object {
        "color": "#222222",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 18,
        "fontWeight": "500",
        "lineHeight": 23,
        "marginBottom": 8,
      },
    ]
  }
>
  Hey Now...
</Text>
`;

exports[`Text renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={false}
  h4={false}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#222222",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 18,
        "fontWeight": "500",
        "lineHeight": 23,
      },
    ]
  }
>
  Hey Now...
</Text>
`;
